# ic-config-canister

./: Cargo.toml  README.md  dfx.json  ic-config-canister.did  package.json
src/: index.did  index.ts  lib.rs
